--- a/src/components/driverProfile/DriverAdaptedRoute.css
+++ b/src/components/driverProfile/DriverAdaptedRoute.css
@@ -9,8 +9,8 @@
     color: #ffffff;
 }
 .driversAdaptedRoute_sendRequest{
-    width: 70%;
-    height: 25%;
+    width: 260px;
+    height: 40px;
     background-color: #ff6600;
     border: 1px solid #ff6600;
     border-radius: 5px;
