--- a/src/components/Places/PlacesList.css
+++ b/src/components/Places/PlacesList.css
@@ -10,19 +10,28 @@
 }
 .placesList_picture{
     display: flex;
-    width: 25%;
-    height: 100%;
+    width: 190px;
+    height: 215px;
 }
 .placesList_info{
     display: flex;
     flex-direction: column;
-    width: 75%;
+    width: 680px;
+    height: 215px;
     padding: 1.5%;
 }
 .placesList_info_row{
     display: flex;
     flex-direction: row;
 }
+.placesList_info_style{
+    font-size: 14px;
+    font-family: "Roboto";
+    height: 85px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .placesList_info_name{
 
 }
