--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -53,6 +53,7 @@
     font-size: 12pt;
     margin: 0px 15px;
 }
+
 .buttonMass_button:hover {
     transition: all 0.3s;
     color: #f60;
@@ -80,6 +81,11 @@
     border-radius: 5px;
     background-color: rgba(48, 66, 105, 0.5) !important;
     background: rgba(48, 66, 105, 0.5) !important;
+}
+
+.selectGeneral:hover {
+    background-color: rgba(48, 66, 105, 0.9) !important;
+    background: rgba(48, 66, 105, 0.9) !important;
 }
 
 .selectGeneralBt {
@@ -131,14 +137,15 @@
 .header_registration:hover {
     transition: all 0.3s;
     border: 1px solid #f60 !important;
-   
 }
-.header_registration:hover  p{
+
+.header_registration:hover p {
     transition: all 0.3s;
-    color: #f60 ;
+    color: #f60;
 }
+
 .header_registration:focus {
-   outline: none;
+    outline: none;
 }
 
 .header_registration p {
