--- a/src/components/drivers/DriversBody/DriversProperties/components/LanguageMenu/LanguageMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/LanguageMenu/LanguageMenu.css
@@ -22,7 +22,7 @@
 
 .languageMenu_element:hover {
     transition: all 0.3s;
-    background-color: #91bed4;
+    background-color: #304269;
 }
 
 .textBlock_value {
