--- a/src/components/drivers/DriversBody/DriversProperties/components/AutoMenu/AutoMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/AutoMenu/AutoMenu.css
@@ -18,7 +18,7 @@
 
 .autoMenu_element:hover {
     transition: all 0.3s;
-    background-color: #91bed4;
+    background-color: #304269;
 }
 
 .autoMenu_element_textBlock {
