--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -39,6 +39,18 @@
 .geo_button_value>div {
     height: 22px;
     padding: 0;
+    border-bottom: 1px dashed #ccc;
+}
+
+.geo_button_value span{
+    font-family: "Roboto";
+    font-weight: 400;
+    font-size: 14px;
+    padding-left: 2px;
+}
+
+.geo_button_value img{
+
 }
 
 .header_buttonMass {
