--- a/src/components/drivers/Drivers.css
+++ b/src/components/drivers/Drivers.css
@@ -5,6 +5,7 @@
     background-size: cover;
     padding-top: 5px;
     padding-bottom: 50px;
+    box-shadow: 0 0 30px rgba(0,0,0,0.5);
 }
 .wrapper{
     position: relative;
@@ -18,6 +19,7 @@
 .drivers_top_block{
     width: 100%;
     margin: 0 auto;
+    
 }
 .drivers_bottom_background {
     padding-top: 30px;
