--- a/src/components/drivers/DriversRoute/DriversRoute.css
+++ b/src/components/drivers/DriversRoute/DriversRoute.css
@@ -5,7 +5,7 @@
     margin-top: 35px;
     padding: 20px 20px 0 20px;
     border-radius: 5px;
-    /*height: 240px;*/
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.3);
 }
 
 .route_date {
