--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -73,7 +73,8 @@
     width: 100%;
     line-height: 28px;
     padding-left: 4px;
-    border-bottom: 1px dashed #ccc;
+    text-decoration: underline dashed;
+    /* border-bottom: 1px dashed #ccc; */
 }
 
 .geo_button_value span {
@@ -82,6 +83,7 @@
     font-size: 14px;
     padding-left: 2px;
     padding-right: 4px;
+    
 }
 
 .header_buttonMass {
