--- a/src/components/Places/PlacesList.css
+++ b/src/components/Places/PlacesList.css
@@ -44,7 +44,7 @@
 
 .placesList_info_position{
     font-size: 12px;
-    font-style: "Roboto";
+    font-family: "Roboto";
     font-weight: 400;
     color: #999999;
 }
