--- a/src/components/Places/PlacesPanel.css
+++ b/src/components/Places/PlacesPanel.css
@@ -2,7 +2,7 @@
 
 .placesPanel_sortText{
     color: #304269;
-    margin-right: 1%;
+    margin-right: 30px;
     line-height: 35px;
 }
 .placesPanel_buttonStyle{
