--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -38,6 +38,16 @@
     max-width: 480px !important;
 }
 
+.logo{
+    width: 240px;
+    height: 30px;
+    background: url(./pictures/logo_blue.svg);
+    background-size: 240px 30px;
+    /* background-clip: border-box; */
+    /* background-position: left 0px bottom 0px; */
+  
+}
+
 .headerLogo img {
     padding-left: 0px;
 }
@@ -172,13 +182,14 @@
 .headerSelect {
     padding: 0px !important;
     max-width: 305px !important;
+    max-height: 30px;
 }
 
 .header_registration {
     border: 1px solid #304269;
     border-radius: 5px;
     background: none;
-    line-height: 28px;
+    line-height: 26px;
 }
 
 .header_registration:hover {
@@ -199,7 +210,7 @@
     width: 100% !important;
     margin: 0 !important;
     text-align: center !important;
-    font-size: 9pt !important;
+    font-size: 12px !important;
     font-family: "Roboto" !important;
     font-weight: 500 !important;
     color: #304269;
