--- a/src/components/drivers/DriversRoute/DriversChangeRoute.css
+++ b/src/components/drivers/DriversRoute/DriversChangeRoute.css
@@ -1,29 +1,34 @@
 .route_show_cross {
     display: flex;
-    width: 10%;
-    padding: 0 2%;
-    margin-left: 2%;
+    width: 16px;
+    height: 16px;
+    margin-left: 5px;
+    margin-top: 5px;
+    background: url(pictures/close.svg);
+    background-size: 16px 16px;
 }
 
 .search_input_block {
     display: flex;
     flex-direction: row;
-    width: 85%;
-    height: 100%;
+    width: 235px;
+    height: 25px;
     background: transparent;
     border-bottom: 1px solid #ffffff;
 }
 
 .search_input_icon {
     display: flex;
-    width: 10%;
-    height: 100%;
+    width: 20px;
+    height: 25px;
+    background: url(pictures/location_white.svg);
+    background-size: 20px 25px;
 }
 
 .search_input_style {
     display: flex;
-    width: 80%;
-    height: 100%;
+    width: 215px;
+    height: 25px;
     border: none;
     color: #ffffff;
     background: transparent;
@@ -35,15 +40,17 @@
   font-family: "Roboto";
   font-weight: 400;
   font-size: 12px;
-  margin-bottom: 6%;
-  height: 30%;
+  margin-bottom: 35px;
+  height: 17px;
 }
 
 .route_add_city_imageBlock {
     display: flex;
-    width: 4%;
-    height: 100%;
-    margin-right: 1%;
+    width: 17px;
+    height: 17px;
+    margin-right: 10px;
+    background: url(pictures/add.svg);
+    background-size: 17px 17px;
 }
 
 .route_add_city_text {
@@ -54,7 +61,7 @@
 .route_secondBottomBlock {
     display: flex;
     flex-direction: row;
-    padding: 1% 0;
+    padding-bottom: 19px;
     width: 50%;
 }
 
@@ -65,46 +72,43 @@
 }
 
 .route_secondBottomBlock_date {
-    height: 20%;
-    margin-left: auto;
+    height: 22px;
+    margin-right: auto;
 }
 
 .route_secondBottomBlock_button {
     background-color: #ff6600;
     border-radius: 5px;
     border-color: #ff6600;
-    width: 120%;
-    height: 50%;
+    width:235px;
+    height: 48px;
     color: #ffffff;
-}
-
-.secondBottomBlock_button_loupe {
-    display: flex;
-    width: 40%;
-    height: 100%;
 }
 
 .secondBottomBlock_calendarBlock {
     display: flex;
-    width: 82%;
-    height: 100%;
+    width: 230px;
+    height: 22px;
     border: none;
     border-bottom: 1px solid white;
     background-color: transparent;
     color: white;
+    margin-right: auto;
 }
 
 .secondBottomBlock_calendar {
     display: flex;
-    width: 4%;
-    height: 100%;
-    margin-right: 1%;
+    width: 17px;
+    height: 17px;
+    margin-right: 13px;
+    background: url(pictures/calendar.svg);
+    background-size: 17px 17px;
 }
 
 .secondBottomBlock_dateInput {
     display: flex;
-    width: 82%;
-    height: 100%;
+    width: 202px;
+    height: 22px;
     border: none;
     background-color: transparent;
     color: white;
