--- a/src/components/PlaceDescription/Carousel.css
+++ b/src/components/PlaceDescription/Carousel.css
@@ -5,7 +5,17 @@
 
 
 .photoCarouselClass{
+    position: relative;
     transition-duration: 330ms;
+    transition-property: transform, width;
+    transition-timing-function: cubic-bezier(0.4,0,1,1);
+}
+.carouselPhotoBox{
+    position: absolute;
+    border: 3px solid blue;
+    top: 0;
+    background: transparent;
+    transition-duration: 360ms;
     transition-property: transform, width;
     transition-timing-function: cubic-bezier(0.4,0,1,1);
 }
