--- a/src/components/header/RenderModalRegistration.css
+++ b/src/components/header/RenderModalRegistration.css
@@ -1,25 +1,245 @@
-.registrationBody{
-    /* min-width: 500px;
-    max-width: 500px;
-    min-height: 400px;
-    max-height: 400px; */
+.registrationBody {
+    position: relative;
+    z-index: 0;
 }
 
-.registrationBody p{
+.modal-body {
+    padding: 0 !important;
+}
+
+.sitingInLight {
+    position: relative;
+    left: 0px;
+    z-index: 1;
+    /* background: #d9e8f5; */
+    min-width: 410px;
+    min-height: 460px;
+}
+
+.sitingInLightAnimationLeft {
+    left: 310px;
+    animation-name: sitingInDark;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+}
+
+@keyframes sitingInDark {
+    from {
+        left: 0px;
+    }
+    to {
+        left: 310px;
+    }
+}
+
+.sitingInLightAnimationRight {
+    left: 0px;
+    animation-name: sitingInDarkRight;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+}
+
+@keyframes sitingInDarkRight {
+    from {
+        left: 310px;
+    }
+    to {
+        left: 0px;
+    }
+}
+
+.sitingInLight h3 {
+    font-family: "Roboto";
+    font-weight: 700;
+    font-size: 33.16px;
+    color: #304269;
+    margin-top: 30px;
+}
+
+.iconBlok {
+    margin-bottom: 10px;
+}
+
+.facebookIcon {
+    width: 35px;
+    height: 35px;
+    background: url(./pictures/facebook.svg) no-repeat;
+    background-size: 35px 35px;
+    margin: 5px;
+}
+
+.googleIcon {
+    width: 35px;
+    height: 35px;
+    background: url(./pictures/search.svg);
+    background-size: 35px 35px;
+    margin: 5px;
+}
+
+.twitterIcon {
+    width: 35px;
+    height: 35px;
+    background: url(./pictures/twitter.svg);
+    background-size: 35px 35px;
+    margin: 5px;
+}
+
+.sitingInLightInput {
+    border-radius: 5px;
+    border: none;
+    margin-bottom: 5px;
+    width: 280px;
+    height: 40px;
+    background: #ecf4fa;
     font-family: "Roboto";
     font-weight: 300;
-    font-size: 14px;
+    font-size: 12px;
     color: #666;
-}
-.registrationBody p:hover{
-    cursor: pointer;
-    font-weight: 400;
-    color: #333;
+    padding-left: 35px;
 }
 
-.sitingInDark{
-    background: #304269;
+.sitingInLightInput:focus {
+    outline: none;
 }
-.sitingInLight{
-    background: #d9e8f5;
+
+.sitingInLightInput::placeholder {
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 12px;
+    color: #666;
+}
+
+.sitingInLight p {
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 12px;
+    color: #666;
+}
+
+.sitingInLight a {
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 12px;
+    color: #666;
+    text-decoration: none;
+    cursor: pointer;
+    border-bottom: 1px solid #ccc;
+}
+
+.sitingInLight a:hover {
+    color: #f60;
+}
+
+.sitingInLight button {
+    font-family: "Roboto";
+    font-weight: 400;
+    font-size: 15px;
+    color: #fff;
+    border: 1px solid #304269;
+    background: #304269;
+    border-radius: 5px;
+    padding: 10px 20px;
+    min-width: 150px;
+    cursor: pointer;
+    transition: all 0.3s;
+    margin-top: 25px;
+}
+
+.sitingInLight button:hover {
+    border-color: #f60;
+    background: #f60;
+}
+
+.sitingInLight button:focus {
+    outline: none;
+}
+
+.registrationDark {
+    position: relative;
+    z-index: 2;
+    background: #304269;
+    left: 0px;
+    width: 310px !important;
+    min-height: 460px;
+    overflow: hidden;
+}
+
+.registrationDarkAnimationLeft {
+    left: -410px;
+    animation-name: registrationDark;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+}
+
+@keyframes registrationDark {
+    from {
+        left: 0px;
+        min-width: 310px;
+    }
+    50% {
+        min-width: 410px;
+    }
+    to {
+        left: -410px;
+        min-width: 310px;
+    }
+}
+
+.registrationDarkAnimationRight {
+    left: 0px;
+    animation-name: registrationDarkRight;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+}
+
+@keyframes registrationDarkRight {
+    from {
+        left: -410px;
+        min-width: 310px;
+    }
+    40% {
+        min-width: 380px;
+    }
+    to {
+        left: 0px;
+        min-width: 310px;
+    }
+}
+
+.registrationDark h3 {
+    font-family: "Roboto";
+    font-weight: 700;
+    font-size: 24px;
+    color: #fff;
+}
+
+.registrationDark p {
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 12px;
+    color: #fff;
+    line-height: 12px;
+}
+
+.registrationDark button {
+    font-family: "Roboto";
+    font-weight: 400;
+    font-size: 15px;
+    color: #fff;
+    background: none;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    padding: 10px 20px;
+    min-width: 150px;
+    transition: all 0.3s;
+    margin-top: 10px;
+}
+
+.registrationDark button:hover {
+    border-color: #f60;
+    background: #f60;
+}
+
+.registrationDark button:focus {
+    outline: none;
 }
