--- a/src/components/PlaceDescription/PlaceDescription.css
+++ b/src/components/PlaceDescription/PlaceDescription.css
@@ -72,7 +72,21 @@
     color: rgb(153, 153, 153);
     
 }
-
+.photoCarouselClass{
+    position: relative;
+    transition-duration: 330ms;
+    transition-property: transform, width;
+    transition-timing-function: cubic-bezier(0.4,0,1,1);
+}
+.carouselPhotoBox{
+    position: absolute;
+    border: 3px solid blue;
+    top: 0;
+    background: transparent;
+    transition-duration: 360ms;
+    transition-property: transform, width;
+    transition-timing-function: cubic-bezier(0.4,0,1,1);
+}
 .placesDescription_photos_showCollectionBox{
     position: absolute;
     top: 0px;
