--- a/src/components/drivers/DriversBody/DriversCommercial/DriversCommercial.css
+++ b/src/components/drivers/DriversBody/DriversCommercial/DriversCommercial.css
@@ -1,17 +1,18 @@
 .drivers_commercial{
-  padding: 5% 0;
+  padding: 85px 0;
   border-radius: 5px;
+  width: 290px;
   box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.25);
 }
 .commercial_picture{
   width: 80%;
-  margin: 0 auto 4% auto;
+  margin: 0 auto 60px auto;
 }
 .picture1{ 
-  height: 40%;
+  height: 342px;
 }
 .picture2{
-  height: 55%; 
+  height: 400px; 
 }
 @media (max-width: 1200px){
   .commercial_picture {width: 90%}
