--- a/src/components/Tours/ToursCountryInfo.css
+++ b/src/components/Tours/ToursCountryInfo.css
@@ -1,23 +1,25 @@
-.toursCountryInfo_inputBlock{
+.toursCountryInfo_inputBlock {
     width: 282px;
     height: 36px;
-    background-color: rgba(255,255,255,0.2);
+    background-color: rgba(255, 255, 255, 0.2);
     border-radius: 5px;
 }
-.toursCountryInfo_inputBlock_icon{
+
+.toursCountryInfo_inputBlock_icon {
     width: 16px;
     height: 17px;
-    
     margin: auto 6px auto 6px;
 }
-.toursCountryInfo_inputBlock_input{
+
+.toursCountryInfo_inputBlock_input {
     width: 254px;
     padding: 0 4px;
     height: 100%;
     border: none;
     background-color: transparent;
 }
-.toursCountryInfo_tourSearchButton{
+
+.toursCountryInfo_tourSearchButton {
     width: 256px;
     height: 40px;
     background-color: #f26101;
