--- a/src/components/header/StandartHeaderStyles.css
+++ b/src/components/header/StandartHeaderStyles.css
@@ -1,4 +1,4 @@
-.colorClass{
+/* .colorClass{
     color: #304269 !important
 }
 .colorClass2{
@@ -22,4 +22,4 @@
 }
 .labelColorClass div{
     background: #fff;
-}
+} */
