--- a/src/components/drivers/DriversBody/DriversProperties/components/PagesMenu/PagesMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/PagesMenu/PagesMenu.css
@@ -17,7 +17,7 @@
 
 .pagesMenu_element :hover {
     transition: all 0.3s;
-    background-color: #304269;
+    background-color: #d8e7f4;
 }
 
 .pagesMenu_element_text {
