--- a/src/components/PlaceDescription/PlaceDescription.css
+++ b/src/components/PlaceDescription/PlaceDescription.css
@@ -23,6 +23,7 @@
     font-weight: 600;
     color: #304269;
     margin-right: auto;
+    line-height: 34px;
 }
 .placeDescription_description_date{
     font-size: 12px;
