--- a/src/components/driverProfileRegistration/DriverProfileBasicInformation.css
+++ b/src/components/driverProfileRegistration/DriverProfileBasicInformation.css
@@ -23,7 +23,7 @@
     font-family: "Roboto";
     font-weight: 400;
     font-size: 16px;
-    background: url(./img/edit.svg) no-repeat;
+    background: url(./img/editBlue.svg) no-repeat;
     background-size: 20px 20px;
     background-position: top 15px left 190px;
     cursor: pointer;
