--- a/src/components/driverProfileRegistration/DriverProfileBasicInformation.css
+++ b/src/components/driverProfileRegistration/DriverProfileBasicInformation.css
@@ -18,7 +18,8 @@
 .driverProfileBasicInformationBodyTopImg {
     position: absolute;
     z-index: 2;
-    display: none;
+    display: flex;
+    opacity: 0;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
@@ -29,7 +30,7 @@
     font-family: "Roboto";
     font-weight: 500;
     font-size: 12px;
-    transition: all 0.3s;
+    transition: 0.5s ease;
 }
 
 .driverProfileBasicInformationBodyTopImgHover{
@@ -37,7 +38,7 @@
 }
 
 .driverProfileBasicInformationBodyTopImgHover:hover .driverProfileBasicInformationBodyTopImg {
-    display: flex ;
+    opacity: 1;
 }
 
 
