--- a/src/components/driverProfileRegistration/DriverProfileCar.css
+++ b/src/components/driverProfileRegistration/DriverProfileCar.css
@@ -1,19 +1,25 @@
-.driverProfileCarFilledCard{
+/* Car Open*/
+
+.driverProfileCarFilledCard {
     min-height: 250px;
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
+    margin-bottom: 10px;
 }
-.driverProfileCarFilledCardImg img{
+
+.driverProfileCarFilledCardImg img {
     width: 305px;
     height: 200px;
     margin-right: 15px;
+    border-radius: 5px;
 }
-.driverProfileCarFilledCardInformation{
+
+.driverProfileCarFilledCardInformation {
     min-width: 250px;
     width: 100%;
 }
 
-.driverProfileCarFilledCardInformation p{
+.driverProfileCarFilledCardInformation p {
     font-family: "Roboto";
     font-weight: 400;
     font-size: 14px;
@@ -21,7 +27,7 @@
     margin-bottom: 10px;
 }
 
-.driverProfileCarFilledCardInformationNameCar p:first-child{
+.driverProfileCarFilledCardInformationNameCar p:first-child {
     font-family: "Roboto";
     font-weight: 500;
     font-size: 16px;
@@ -29,28 +35,94 @@
     margin-bottom: 0px;
 }
 
-.driverProfileCarFilledCardInformationNameCar p:last-child{
-    margin-bottom: 20px; 
+.driverProfileCarFilledCardInformationNameCar p:last-child {
+    margin-bottom: 20px;
 }
 
-.driverProfileCarFilledCardInformationComfort{
-    margin-bottom: 20px; 
+.driverProfileCarFilledCardInformationNameCarEdit {
+    background: url(./img/editBlue.svg) no-repeat;
+    background-size: 30px 20px;
+    background-position: top 0px right 0px;
 }
 
-.driverProfileCarFilledCardInformationDeleteCar{
+.driverProfileCarFilledCardInformationNameCarEdit p {
+    padding-right: 30px;
+    padding-top: 5px;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.driverProfileCarFilledCardInformationComfort {
+    margin-bottom: 20px;
+}
+
+.driverProfileCarFilledCardInformationComfort p {
+    margin: 0;
+}
+
+.driverProfileCarFilledCardInformationDeleteCar {
     text-decoration: underline #304269;
     cursor: pointer;
     margin-bottom: 0px;
 }
 
-.driverProfileCarFilledCardInformationCommon{
+.driverProfileCarFilledCardInformationCommon {
     max-width: 250px;
 }
 
-.driverProfileCarFilledCardInformationCommonImg{
+.driverProfileCarFilledCardInformationCommonImg {
     width: 35px;
     height: 30px;
     background-size: 30px 30px;
     background-repeat: no-repeat;
     background-position: right 5px bottom 5px;
 }
+
+.driverProfileCarFilledCardInformationComfortImg img {
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+/* Car Close*/
+
+/* Add new Car Open*/
+
+.driverProfileCarAddNewCar{
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    min-height: 480px;
+    margin-bottom: 150px;
+}
+
+.driverProfileCarAddNewCarPhotoCar{
+    position: relative;
+    max-width: 305px;
+    max-height: 200px;
+    min-width: 305px;
+    min-height: 200px;
+    margin-right: 15px;
+    border-radius: 5px;
+    background: #ccc;
+    text-align: center;
+}
+
+.driverProfileCarAddNewCarPhotoCarImg{
+    max-width: 305px;
+    max-height: 200px;
+    background-size: contain;
+}
+
+.driverProfileCarAddNewCarPhotoCar label{
+    position: absolute;
+    z-index: 5;
+    left: 50px;
+    font-family: "Roboto";
+    font-weight: 400;
+    font-size: 16px;
+    color: #fff;
+    line-height: 200px;
+    cursor: pointer;
+}
+
+
+/* Add new Car Close*/
